force-app/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
    <description>Create Custom object for panther school project</description>
    <label>Property</label>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>