force-app/main/default/objects/Property__c/fields/Bathrooms__c.field-meta.xml
<CustomField>
    <fullName>Bathrooms__c</fullName>
    <description>Enter number of bathrooms (use decimals for half baths)</description>
    <inlineHelpText>Number of bathrooms</inlineHelpText>
    <label>Bathrooms</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>