force-app/main/default/objects/Property__c/fields/Days_on_Market__c.field-meta.xml
<CustomField>
    <fullName>Days_on_Market__c</fullName>
    <description>Number of days on market</description>
    <formula>TODAY()-Listing_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-calculated: TODAY() - Listing_Date__c</inlineHelpText>
    <label>Days_on_Market</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>