force-app/main/default/objects/Property__c/fields/Garage_Spaces__c.field-meta.xml
<CustomField>
    <fullName>Garage_Spaces__c</fullName>
    <description>Number of garage spaces</description>
    <inlineHelpText>Enter number of covered parking spaces</inlineHelpText>
    <label>Garage_Spaces</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>