force-app/main/default/objects/Property__c/fields/Is_Luxury_Property__c.field-meta.xml
<CustomField>
    <fullName>Is_Luxury_Property__c</fullName>
    <description>Automatically identifies luxury properties based on criteria</description>
    <formula>OR(
  Listing_Price__c &gt; 1000000,
  AND(Property_PricePerSqFt__c &gt; 500, Square_Footage__c &gt; 3000),
  AND(Pool__c, Square_Footage__c &gt; 4000),
  AND(Garage_Spaces__c &gt;= 3, Square_Footage__c &gt; 3500)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_Luxury_Property</label>
    <type>Checkbox</type>
</CustomField>