force-app/main/default/objects/Property__c/fields/Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Market_Value__c</fullName>
    <description>Assessed market value</description>
    <inlineHelpText>Current market assessment value</inlineHelpText>
    <label>Market_Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>