force-app/main/default/objects/Property__c/fields/Pool__c.field-meta.xml
<CustomField>
    <fullName>Pool__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does property have a pool</description>
    <inlineHelpText>Check if property includes a swimming pool</inlineHelpText>
    <label>Pool</label>
    <type>Checkbox</type>
</CustomField>