force-app/main/default/objects/Property__c/fields/Primary_Agent__c.field-meta.xml
<CustomField>
    <fullName>Primary_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup with agent for panther school project</description>
    <label>Primary_Agent</label>
    <referenceTo>Agent__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>