force-app/main/default/objects/Property__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <description>Complete property address</description>
    <inlineHelpText>Full address including street, city, state, zip</inlineHelpText>
    <label>Property_Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>