force-app/main/default/objects/Property__c/fields/Property_Age__c.field-meta.xml
<CustomField>
    <fullName>Property_Age__c</fullName>
    <description>Calculates age of property in years</description>
    <formula>IF(
  NOT(ISBLANK( Year_Built__c )),
  YEAR(TODAY()) - Year_Built__c,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property_Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>