force-app/main/default/objects/Property__c/fields/Property_DaysOnMarket__c.field-meta.xml
<CustomField>
    <fullName>Property_DaysOnMarket__c</fullName>
    <description>Calculates days property has been on market</description>
    <formula>IF(
  NOT(ISBLANK(Listing_Date__c)),
  IF(
    TEXT(Property_Status__c) = &quot;Sold&quot;,
    TODAY() -  Listing_Date__c ,
    TODAY() - Listing_Date__c
  ),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property_DaysOnMarket</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>