force-app/main/default/objects/Property__c/fields/Property_PricePerSqFt__c.field-meta.xml
<CustomField>
    <fullName>Property_PricePerSqFt__c</fullName>
    <description>Calculates price per square foot</description>
    <formula>IF(
  AND(NOT(ISBLANK(Listing_Price__c)), Square_Footage__c &gt; 0),
  Listing_Price__c / Square_Footage__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property_PricePerSqFt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>