force-app/main/default/objects/Property__c/fields/Property_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Property_Taxes__c</fullName>
    <description>Annual property taxes</description>
    <inlineHelpText>Enter annual property tax amount</inlineHelpText>
    <label>Property_Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>