force-app/main/default/objects/Property__c/fields/Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Square_Footage__c</fullName>
    <description>Enter total living space in square feet</description>
    <inlineHelpText>Total square footage</inlineHelpText>
    <label>Square_Footage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>