force-app/main/default/objects/Property__c/fields/Summary_of_Property__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Property__c</fullName>
    <label>Summary of Property</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>