force-app/main/default/objects/Property__c/fields/Year_Built__c.field-meta.xml
<CustomField>
    <fullName>Year_Built__c</fullName>
    <description>Year the property was built</description>
    <inlineHelpText>Enter 4-digit year</inlineHelpText>
    <label>Year_Built</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>