force-app/main/default/objects/Property__c/validationRules/Minimum_Square_Footage.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Square_Footage</fullName>
    <active>true</active>
    <description>Ensures reasonable square footage based on property type</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Square_Footage__c)),
  OR(
    AND(TEXT(Property_Type__c) = &quot;Single Family&quot;, Square_Footage__c &lt; 500),
    AND(TEXT(Property_Type__c) = &quot;Condo&quot;, Square_Footage__c &lt; 300),
    AND(TEXT(Property_Type__c) = &quot;Commercial&quot;, Square_Footage__c &lt; 1000)
  )
)</errorConditionFormula>
    <errorDisplayField>Square_Footage__c</errorDisplayField>
    <errorMessage>Square footage seems too small for the selected property type</errorMessage>
</ValidationRule>